...
        <Link.Preview style={{ backgroundColor: 'white' }} />
        <Link.Menu>
          <Link.MenuAction
            icon="trash"
            destructive
            onPress={() => onDelete(item.id)}
          >Delete</Link.MenuAction>
        </Link.Menu>
      </Link>
    </View>
  );
});

...
      )}

      {/* Floating action button to create a task. */}
      <View style={styles.fab}>
        <Host matchContents>
          <Button
            label="Add task"
            systemImage="plus"
            modifiers={[
              labelStyle('iconOnly'),
              font({ size: 24, weight: 'semibold' }),
              buttonStyle('borderedProminent'),
              buttonBorderShape('circle'),
...
