...
    <>
      <Stack.Screen
        options={{
          headerRight: () => (
            <Host matchContents>
              <Button
                label="Delete task"
                systemImage="trash"
                role="destructive"
                modifiers={[labelStyle('iconOnly'), font({ size: 20 }), padding({ all: 4 })]}
                onPress={onDelete}
              />
            </Host>
...
